<resources>
    <string name="app_name">СибГУТИ</string>
    <string name="dialogbutton">Отобразить диалог</string>
    <string name="hello_world">Hello, World!</string>
    <string name="profile">Профиль</string>
    <string name="home">Новости</string>
    <string name="display_name">Name</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="login">Войти</string>
    <string name="group">Group</string>
    <string name="phone">Phone</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="news_image">News image</string>
    <string name="avatar">Avatar</string>
    <string name="position">Position</string>
    <string name="friends">Список друзей</string>
    <string name="schedule">Расписание</string>
    <string name="teacher">Teacher</string>
    <string name="type">Type</string>
    <string name="time">00:00</string>
    <string name="classroom">000(К.0)</string>
    <string name="password">Пароль</string>
    <string name="edit">Исправить</string>
    <string name="favorite">В избранное</string>
    <string name="more">Дополнительно</string>
    <string name="send_message">Написать сообщение</string>
    <string name="delete_friend">Удалить из друзей</string>
    <string name="call">Позвонить</string>
    <string name="register">Регистрация</string>
    <string name="events">Мероприятия</string>
    <string name="title">Title</string>
    <string name="search">Поиск</string>
    <string name="edit_post">Редактировать</string>\
    <string name="delete_post">Удалить</string>
    <string name="SERVER_CLIENT_ID">49355483592-4qoc0itbc2qbot3jk12g83kel99oqntt.apps.googleusercontent.com</string>
</resources>