<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/home"
        android:visible="true" />
    <item
        android:id="@+id/homeEventsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/events"
        android:visible="true" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        android:visible="true" />
</menu>