<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageview_item_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/textview_item_date"
            app:layout_constraintStart_toStartOf="@+id/textview_item_date"
            app:layout_constraintTop_toBottomOf="@+id/textview_item_date"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/textview_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintTop_toBottomOf="@+id/textview_item_title" />

        <TextView
            android:id="@+id/textview_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="vertical"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:text="@string/description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_item_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>